kg8s/seed007-oidc/auth/istio/authz-prometheus.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: prometheus-kiali-allow
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: prometheus
  action: ALLOW
  rules:
    - from:
        - source:
            # notPrincipals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
            principals:
              - cluster.local/ns/istio-system/sa/kiali
              - cluster.local/ns/istio-system/sa/grafana
